<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerStack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/playerColour"
                    android:layout_width="92dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/conDesc"
                    android:src="@drawable/red"
                    android:textAlignment="center"
                    android:paddingBottom="5sp">

                </ImageView>

                <TextView
                    android:id="@+id/playerName"
                    android:layout_width="230dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/classicness"
                    android:padding="4dp"
                    android:gravity="center"
                    android:paddingLeft="20sp"
                    android:text="@string/playerName"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="68dp"
                    android:layout_weight="1"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3"
            >

                <Button
                    android:id="@+id/minuspoints"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:textSize="25sp"
                    android:fontFamily="@font/classicness"
                    android:text="@string/minus"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/points"
                    android:layout_width="237dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/classicness"
                    android:gravity="center"
                    android:text="@string/na"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/pluspoints"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/classicness"
                    android:text="@string/plus" />
        </LinearLayout>


</LinearLayout>
