<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manabluebackground"
    tools:context=".Act_no_players">


    <TextView
        android:id="@+id/writeName"
        android:layout_width="203dp"
        android:layout_height="13dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/classicness"
        android:text="NO OF PLAYERS"
        android:textAlignment="center"
        android:shadowColor="@color/pink"
        android:shadowDy="0"
        android:shadowDx="0"
        android:textColor="@color/white"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="409dp"
        android:layout_height="532dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeName">


        <Button
            android:textColor="@color/white"
            android:id="@+id/button8"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="394dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createEightPlayers"
            android:text="@string/eight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

        <!-- player 2-->
        <Button
            android:textColor="@color/white"
            android:id="@+id/button2"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createTwoPlayers"
            android:text="@string/two"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="55dp"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button2"
            app:srcCompat="@drawable/twoplayers"
            android:contentDescription="@string/conDesc" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/button6"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createSixPlayers"
            android:text="@string/six"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

        <!--        player 5-->
        <Button
            android:textColor="@color/white"
            android:id="@+id/button5"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createFivePlayers"
            android:text="@string/five"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

        <!--        Player Four -->
        <Button
            android:textColor="@color/white"
            android:id="@+id/button4"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="146dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createFourPlayers"
            android:text="@string/four"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

        <!--        player 3-->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button4"
            app:srcCompat="@drawable/threeormoreplayers"
            android:contentDescription="@string/conDesc" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView3"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button4"
            app:srcCompat="@drawable/threeormoreplayers"
            android:contentDescription="@string/conDesc" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button4"
            app:srcCompat="@drawable/threeormoreplayers"
            android:contentDescription="@string/conDesc" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView4"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button7"
            app:srcCompat="@drawable/threeormoreplayers"
            android:contentDescription="@string/conDesc" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/button8"
            app:srcCompat="@drawable/threeormoreplayers"
            android:contentDescription="@string/conDesc" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/button3"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createThreePlayers"
            android:text="@string/three"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="71dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="1dp"
            android:layout_toStartOf="@+id/button3"
            app:srcCompat="@drawable/threeplayers"
            android:contentDescription="@string/conDesc" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/button7"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/classicness"
            android:onClick="createSevenPlayers"
            android:text="@string/seven"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/blue"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>