<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manabluebackground"
    android:orientation="horizontal"
    tools:context=".Activity_StartMenu">


    <TextView
        android:id="@+id/startNewGame"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/classicness"
        android:text="@string/newGame"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="406dp"
        android:layout_height="353dp"
        android:layout_marginTop="72dp"
        app:layout_constraintBottom_toTopOf="@+id/testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedGames"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/allMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/savedGames"
        android:layout_width="178dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/classicness"
        android:src="@drawable/savedgames"
        android:text="@string/savedGames"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startNewGame" />

    <Button
        android:id="@+id/testing"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/classicness"
        android:text="@string/top_games"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>